submarine-cloud/manifests/submarine-cluster/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: myweb
spec:
  ports:
    - name: myweb-svc
      port: 8080
      targetPort: 8080
      nodePort: 30001
  selector:
    app: cluster-test
  type: NodePort

# kubectl port-forward svc/myweb 8080:8080 --address 0.0.0.0
