submarine-cloud/manifests/submarine-cluster/submarine-server.yaml
kind: Service
apiVersion: v1
metadata:
  name: submarine-workbench
spec:
  selector:
    app: cluster-test
  ports:
    - port: 8080

---
kind: Service
apiVersion: v1
metadata:
  name: submarine-cluster
spec:
  selector:
    app: cluster-test
  ports:
    - port: 8081

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: submarine-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: submarine-workbench
              servicePort: 8080

---
# You can also access the submarine workbench via port-forward
# kubectl port-forward svc/submarine-svc 18080:8080 --address 0.0.0.0
